<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbars="vertical"
    android:layout_marginTop="59dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/faq_heading"
            android:text="FAQs"
            android:textSize="35sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/faq_heading"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq_qns1"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="21sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fqa_qns1_ans"
                android:textColor="@color/green"
                android:textSize="17sp"

                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_gray"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq_qns2"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq_qns2_ams"
                android:textColor="@color/green"
                android:textSize="17sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_gray"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq_qns3"
                android:textStyle="bold"
                android:textSize="21sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="@color/green"
                android:text="@string/faq_q3_ans"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_gray"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold"
                android:text="@string/fqa_q4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="@color/green"
                android:text="@string/faq_q4_ans"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_gray"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>





        </LinearLayout>
    </RelativeLayout>


</ScrollView>