<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbars="vertical"
    android:layout_marginTop="59dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="Basic Syntax"
            android:textColor="@color/red"
            android:id="@+id/heading_syntax"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@id/heading_syntax"
            android:orientation="vertical"
            android:id="@+id/var_layout_syntax"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/syntax_top1"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"
                android:textStyle="normal"
                android:textSize="21sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:text="Lines and Indentation"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/syntax_top2"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"
                android:textStyle="normal"
                android:textSize="21sp"/>

            <!-- ###########Image here############### -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:text="Comments in Python"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/syntax_top3"
                android:textColor="@color/black"
                android:layout_marginBottom="15dp"
                android:textStyle="normal"
                android:textSize="21sp"/>

            <!--######### example img here ############## -->


        </LinearLayout>
        <Button
            android:layout_width="140dp"
            android:layout_below="@id/var_layout_syntax"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@color/light_green"
            android:text="Next"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"
            android:id="@+id/btn_syn_next"
            />


    </RelativeLayout>

</ScrollView>