<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbars="vertical"
    android:layout_marginTop="59dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/var_heading"
            android:text="Variables Type"
            android:textSize="35sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red"
            android:layout_marginBottom="30dp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@id/var_heading"
            android:orientation="vertical"
            android:id="@+id/vertical_var"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/var_top1"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:textSize="21sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_gray"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:text="Assigning Values to Variables"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:text="@string/var_top2"
                android:layout_marginBottom="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_gray"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <!--image goes here -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:text="Standard Data Types"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/var_top3"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:textSize="21sp"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:id="@+id/list_vars">


            </ListView>

        </LinearLayout>

        <Button
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_below="@id/vertical_var"
            android:layout_alignParentLeft="true"
            android:id="@+id/btn_varfrag_prev"
            android:layout_margin="9dp"
            android:textStyle="bold"
            android:text="Previous"
            android:background="@color/light_green"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_below="@id/vertical_var"
            android:layout_alignParentRight="true"
            android:id="@+id/btn_varfrag_next"
            android:layout_margin="9dp"
            android:textStyle="bold"
            android:text="next"
            android:background="@color/light_green"
            android:textColor="@color/white"/>

    </RelativeLayout>

</ScrollView>
